- merged java 11 version into java 8 version